--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>CPU调度算法与银行家算法的简单演示界面</title>
-  <link rel="stylesheet" href="">
   <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css">
   <style>
       body { font-family: "Consolas","微软雅黑"; /*margin-top: 50px;*/ }
@@ -235,10 +234,10 @@
 <script src="http://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
 <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
 <script src="http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-<script src="common.js"></script>
-<script src="cpu.js"></script>
-<script src="cpu-dom.js"></script>
-<script src="banker.js"></script>
-<script src="banker-dom.js"></script>
+<script src="assets/js/common.js"></script>
+<script src="assets/js/cpu.js"></script>
+<script src="assets/js/cpu-dom.js"></script>
+<script src="assets/js/banker.js"></script>
+<script src="assets/js/banker-dom.js"></script>
 </body>
 </html>
